--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/Isaackomeza/Backend-Blog-API#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "joi": "^17.2.0",
+    "jsonwebtoken": "^8.5.1",
     "uuidv4": "^6.2.2"
   },
   "devDependencies": {
