--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "engine": "^1.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "joi": "^17.2.0",
@@ -36,5 +35,8 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "14.8.0"
   }
 }
