--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node --debug ./build/index.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
-    "build": "rm -rf build && babel ./src -d build"
+    "build": "babel ./src -d build --source-maps --copy-files"
+    
   },
   "repository": {
     "type": "git",
