--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --debug ./build/index.js",
+    "start": "node --debug ./src/index.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
     "build": "babel ./src -d build --source-maps --copy-files"
     
