--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./build/index.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
     "build": " babel ./src -d build",
-    "test": "mocha ./src/test --require @babel/register"
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "test": "nyc --reporter=text --reporter=html mocha ./src/test --require @babel/polyfill --require @babel/register --timeout 10000 --exit"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/Isaackomeza/Backend-Blog-API#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.10.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -38,8 +40,11 @@
     "@babel/register": "^7.10.5",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "coverage": "^0.4.1",
+    "coveralls": "^3.1.0",
     "mocha": "^8.1.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "nyc": "^15.1.0"
   },
   "engines": {
     "node": "14.8.0"
