--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-errors": "^1.8.0",
     "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.2",
     "regenerator-runtime": "^0.13.7",
     "uuidv4": "^6.2.2"
   },
